--- a/en/index.html
+++ b/en/index.html
@@ -4,22 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma Aguado — Portfolio</title>
-    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=4.4">
+    <link rel="stylesheet" href="/palomaaguado.github.io/styles.css?v=4.5">
     <style>
-        /* Estilo Serio y Corporativo */
+        /* Franja Superior Corporativa */
         .top-bar {
             background-color: #2c2c2c; 
             height: 12px;
             width: 100%;
         }
 
+        /* Navegación (Idioma y Contacto) */
+        nav.main-nav {
+            display: flex;
+            justify-content: flex-end;
+            padding: 20px 5%;
+            gap: 20px;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        nav.main-nav a {
+            text-decoration: none;
+            color: #666;
+            transition: 0.3s;
+        }
+        nav.main-nav a:hover { color: #2c2c2c; }
+
         header {
-            padding: 60px 5% 40px 5%;
+            padding: 20px 5% 40px 5%;
             background-color: white;
         }
 
         .seccion-proyectos {
-            padding: 20px 5% 40px 5%;
+            padding: 40px 5%;
         }
 
         .titulo-seccion {
@@ -36,34 +53,58 @@
         .proyectos-grid {
             display: grid;
             grid-template-columns: 1fr 1fr; 
-            gap: 40px;
+            gap: 20px;
         }
 
+        /* Contenedor del Efecto Hover */
         .proyecto-card {
+            position: relative;
             text-decoration: none;
-            color: inherit;
+            overflow: hidden;
+            height: 500px;
+            border-radius: 4px;
         }
 
         .proyecto-card img {
             width: 100%;
-            height: 500px; 
+            height: 100%;
             object-fit: cover;
-            border-radius: 4px;
-            transition: 0.3s;
+            transition: transform 0.6s ease;
+        }
+
+        /* Capa de texto que aparece al pasar el ratón */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(44, 44, 44, 0.85); /* Gris carbón con transparencia */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.4s ease;
+        }
+
+        .overlay h3 {
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 1.2rem;
+            text-align: center;
+            padding: 0 20px;
         }
 
         .proyecto-card:hover img {
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+            transform: scale(1.05);
         }
 
-        .proyecto-card h3 {
-            margin-top: 15px;
-            font-size: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
+        .proyecto-card:hover .overlay {
+            opacity: 1;
         }
 
-        /* Caja Coming Soon integrada en el estilo */
+        /* Coming Soon con el mismo tamaño */
         .coming-soon-box {
             height: 500px;
             background: #f9f9f9;
@@ -71,15 +112,16 @@
             align-items: center;
             justify-content: center;
             color: #ccc;
-            border-radius: 4px;
             text-transform: uppercase;
             letter-spacing: 2px;
             font-size: 0.8rem;
+            border-radius: 4px;
         }
 
         @media (max-width: 768px) {
             .proyectos-grid { grid-template-columns: 1fr; }
-            .proyecto-card img, .coming-soon-box { height: 350px; }
+            .proyecto-card, .coming-soon-box { height: 350px; }
+            .overlay { opacity: 1; background: rgba(0,0,0,0.3); } /* En móvil se ve un poco el texto */
         }
     </style>
 </head>
@@ -87,9 +129,15 @@
 
     <div class="top-bar"></div>
 
+    <nav class="main-nav">
+        <a href="/palomaaguado.github.io/es/index.html">ES</a>
+        <a href="/palomaaguado.github.io/en/index.html">EN</a>
+        <a href="mailto:tu-correo@ejemplo.com">Contacto</a>
+    </nav>
+
     <header>
-        <h1 style="font-size: 2.5rem; margin:0; letter-spacing: -1px;">PALOMA AGUADO</h1>
-        <p style="color: #666; font-size: 1.1rem; margin-top: 10px;">Content Creator & Real Estate Marketing Specialist</p>
+        <h1 style="font-size: 2.5rem; margin:0; letter-spacing: -1px; text-transform: uppercase;">PALOMA AGUADO</h1>
+        <p style="color: #666; font-size: 1rem; margin-top: 10px; letter-spacing: 1px;">Content Creator & Real Estate Marketing Specialist</p>
     </header>
 
     <main>
@@ -97,9 +145,11 @@
             <h2 class="titulo-seccion">Lifestyle & Brands</h2>
             <div class="proyectos-grid">
                 
-                <a href="es/proyectos/kukicha.html" class="proyecto-card">
+                <a href="/palomaaguado.github.io/es/proyectos/kukicha.html" class="proyecto-card">
                     <img src="/palomaaguado.github.io/es/proyectos/kukicha-portada.jpg" alt="Kukicha">
-                    <h3>KUKICHA — Content Creation</h3>
+                    <div class="overlay">
+                        <h3>KUKICHA <br> <span style="font-size: 0.8rem; font-weight: 300;">Social Media Content</span></h3>
+                    </div>
                 </a>
 
                 <div class="coming-soon-box">
@@ -113,14 +163,18 @@
             <h2 class="titulo-seccion">Real Estate Strategy</h2>
             <div class="proyectos-grid">
                 
-                <a href="es/proyectos/cafur.html" class="proyecto-card">
+                <a href="/palomaaguado.github.io/es/proyectos/cafur.html" class="proyecto-card">
                     <img src="/palomaaguado.github.io/es/proyectos/cafur1.jpg" alt="Cafur">
-                    <h3>CAFUR — Social Media & Audiovisual</h3>
+                    <div class="overlay">
+                        <h3>CAFUR <br> <span style="font-size: 0.8rem; font-weight: 300;">Marketing & Audiovisual</span></h3>
+                    </div>
                 </a>
 
-                <a href="es/proyectos/vivendex.html" class="proyecto-card">
+                <a href="/palomaaguado.github.io/es/proyectos/vivendex.html" class="proyecto-card">
                     <img src="/palomaaguado.github.io/es/proyectos/vivendex-portada.jpg" alt="Vivendex">
-                    <h3>VIVENDEX — Branding & TikTok</h3>
+                    <div class="overlay">
+                        <h3>VIVENDEX <br> <span style="font-size: 0.8rem; font-weight: 300;">Branding & TikTok</span></h3>
+                    </div>
                 </a>
 
             </div>
