--- a/en/index.html
+++ b/en/index.html
@@ -6,14 +6,48 @@
     <title>Paloma Aguado | Portfolio</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        /* Charcoal top bar */
+        /* Tipografía idéntica al index español */
+        body {
+            margin: 0;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background-color: white;
+            color: #333;
+        }
+
+        /* Franja superior */
         .top-line {
             background-color: #2c2c2c;
             height: 12px;
             width: 100%;
         }
 
-        /* Section Titles */
+        /* Logo y Header con estilo español */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 30px 5%;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #666;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: 0.3s;
+        }
+
+        nav a:hover { color: #000; }
+
+        /* Títulos de sección */
         .section-title {
             font-size: 1.1rem;
             text-transform: uppercase;
@@ -22,10 +56,10 @@
             margin: 60px 5% 25px 5%;
             padding-left: 15px;
             border-left: 3px solid #2c2c2c;
-            font-family: sans-serif;
+            font-weight: bold;
         }
 
-        /* Grid for 2 columns */
+        /* Grid */
         .gallery-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -33,7 +67,7 @@
             padding: 0 5% 50px 5%;
         }
 
-        /* Alineación uniforme de las tarjetas */
+        /* Tarjetas alineadas */
         .project-card {
             height: 500px;
             overflow: hidden;
@@ -47,7 +81,7 @@
             display: block;
         }
 
-        /* Estilo para el Coming Soon alineado */
+        /* Estilo del Coming Soon */
         .coming-soon-placeholder {
             background-color: #f9f9f9;
             height: 500px;
@@ -57,18 +91,13 @@
             color: #ccc;
             text-transform: uppercase;
             letter-spacing: 2px;
-            font-family: sans-serif;
             font-size: 0.8rem;
             border: 1px solid #eee;
         }
 
         @media (max-width: 768px) {
-            .gallery-grid {
-                grid-template-columns: 1fr;
-            }
-            .project-card, .coming-soon-placeholder {
-                height: 350px;
-            }
+            .gallery-grid { grid-template-columns: 1fr; }
+            .project-card, .coming-soon-placeholder { height: 350px; }
         }
     </style>
 </head>
@@ -93,7 +122,7 @@
                     <div class="overlay">
                         <div class="text">
                             Kukicha<br>
-                            <span>Brand Identity</span>
+                            <span style="font-weight: 300; font-size: 0.8rem; text-transform: none; letter-spacing: 1px;">Brand Identity</span>
                         </div>
                     </div>
                 </a>
@@ -112,7 +141,7 @@
                     <div class="overlay">
                         <div class="text">
                             Cafur<br>
-                            <span>Strategy & Photography</span>
+                            <span style="font-weight: 300; font-size: 0.8rem; text-transform: none; letter-spacing: 1px;">Strategy & Photography</span>
                         </div>
                     </div>
                 </a>
@@ -124,7 +153,7 @@
                     <div class="overlay">
                         <div class="text">
                             Vivendex<br>
-                            <span>Creative Direction</span>
+                            <span style="font-weight: 300; font-size: 0.8rem; text-transform: none; letter-spacing: 1px;">Creative Direction</span>
                         </div>
                     </div>
                 </a>
