--- a/es/index.html
+++ b/es/index.html
@@ -5,51 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma Aguado | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Quitamos subrayados feos */
+        nav a, .project-card a {
+            text-decoration: none !important;
+        }
+
+        /* Franja superior Gris Carbón */
+        .top-line {
+            background-color: #2c2c2c;
+            height: 12px;
+            width: 100%;
+        }
+
+        /* Estilo para los nombres de las secciones */
+        .section-title {
+            font-size: 1.1rem;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            color: #2c2c2c;
+            margin: 60px 5% 25px 5%;
+            padding-left: 15px;
+            border-left: 3px solid #2c2c2c;
+        }
+
+        /* Grid de 2 columnas por sección */
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            padding: 0 5% 50px 5%;
+        }
+
+        /* Forzamos alineación de las tarjetas */
+        .project-card {
+            height: 500px;
+            overflow: hidden;
+            position: relative;
+            margin-bottom: 0 !important; /* Reseteamos margen para el grid */
+        }
+
+        .project-card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* Caja de Próximamente para rellenar el hueco */
+        .coming-soon-placeholder {
+            height: 500px;
+            background-color: #f9f9f9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #ccc;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 0.8rem;
+            border: 1px solid #eee;
+        }
+
+        @media (max-width: 768px) {
+            .gallery-grid { grid-template-columns: 1fr; }
+            .project-card, .coming-soon-placeholder { height: 350px; }
+        }
+    </style>
 </head>
 <body>
+    <div class="top-line"></div>
+
     <header>
         <div class="logo">PALOMA AGUADO</div>
-     <nav>
-    <a href="/palomaaguado.github.io/es/contacto.html">Contacto</a> 
-    <span style="margin: 0 10px; color: #ccc;">|</span>
-    <a href="/palomaaguado.github.io/en/index.html">English</a>
-</nav>
+        <nav>
+            <a href="/palomaaguado.github.io/es/contacto.html">Contacto</a> 
+            <span style="margin: 0 10px; color: #ccc;">|</span>
+            <a href="/palomaaguado.github.io/en/index.html">English</a>
+        </nav>
     </header>
 
-  <main class="gallery">
-        <div class="project-card">
-            <a href="/palomaaguado.github.io/es/proyectos/kukicha.html">
-                <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha">
-                <div class="overlay">
-                    <div class="text">
-                        Kukicha<br>
-                        <span>Identidad de Marca</span>
+    <main>
+        <h2 class="section-title">Lifestyle & Brands</h2>
+        <div class="gallery-grid">
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/proyectos/kukicha.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/packaging.png" alt="Kukicha">
+                    <div class="overlay">
+                        <div class="text">
+                            Kukicha<br>
+                            <span>Identidad de Marca</span>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
+            
+            <div class="coming-soon-placeholder">
+                Próximamente
+            </div>
         </div>
 
-        <div class="project-card">
-            <a href="/palomaaguado.github.io/es/vivendex.html">
-                <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
-                <div class="overlay">
-                    <div class="text">
-                        Vivendex<br>
-                        <span>Dirección Creativa</span>
+        <h2 class="section-title">Estrategia Inmobiliaria</h2>
+        <div class="gallery-grid">
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/cafur.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" alt="Cafur">
+                    <div class="overlay">
+                        <div class="text">
+                            Cafur<br>
+                            <span>Estrategia & Fotografía</span>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
+                </a>
+            </div>
 
-        <div class="project-card">
-            <a href="/palomaaguado.github.io/es/cafur.html">
-                <img src="/palomaaguado.github.io/es/proyectos/cafur5.jpg" alt="Cafur">
-                <div class="overlay">
-                    <div class="text">
-                        Cafur<br>
-                        <span>Estrategia & Fotografía</span>
+            <div class="project-card">
+                <a href="/palomaaguado.github.io/es/vivendex.html">
+                    <img src="/palomaaguado.github.io/es/proyectos/feed%20Vivendex.jpg" alt="Vivendex">
+                    <div class="overlay">
+                        <div class="text">
+                            Vivendex<br>
+                            <span>Dirección Creativa</span>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </main>
+
+    <footer style="text-align: center; padding: 60px 0; color: #ccc; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">
+        © 2026 Paloma Aguado
+    </footer>
+</body>
+</html>
